fix header spacing

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -14,7 +14,8 @@ $bg: #b6d7c0
       repeat: no-repeat
       size: 100%
     @media #{$large-up}
-      padding-bottom: 39%
+      padding-bottom: 0
+      height: 505px
 .main
   padding-bottom: 0
   overflow-y: inherit
